--- a/frontend/src/cssFiles/TextEditMCE.css
+++ b/frontend/src/cssFiles/TextEditMCE.css
@@ -7,8 +7,8 @@
     min-height: 5em;
     outline: none;
     width: 100%;
-    margin-left: 200px;
-    margin-right: 300px;
+    margin-left: 000px;
+    margin-right: 000px;
 }
 
 /* Untested */
