--- a/frontend/src/cssFiles/versionbar.css
+++ b/frontend/src/cssFiles/versionbar.css
@@ -47,8 +47,7 @@
     display: flex;
     flex-direction: column;
     align-content: flex-start;
-    position: absolute;
-    right:0;
+
     
 }
 
